--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+a{
+
+    text-decoration: none;
+}
+
+table{
+
+    border: 1px solid blue;
+    margin-left: auto;
+    margin-right: auto;
+    border-collapse: collapse;
+}
+tr,td,th{
+
+    border: 1px solid blue;
+}
