--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -6,6 +6,9 @@
 
 .show{
 
-    /* display: none; */
-    border: 1px solid red;
+    border: 1px solid red; 
+}
+
+.galleryItem{
+    display: none;
 }
