--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,13 +1,20 @@
 <div>
-    @for(eachPhoto of cphotos;track $index){
+    <p>Select Profile Picture</p>
+    @for(eachPhoto of photos;track $index){
 
     <div [style.display]="'inline'">
-        <!-- <img src={{'assets/images'+'${eachPhoto}''}} alt="some photo"/> -->
-        <!-- <img [src]="eachPhoto" alt="some photo" (click)="send()"> -->
 
+        <!-- @if(!eachPhoto.includes("logo")){
 
-        <img [src]="eachPhoto" [ngClass]="{'photoclass':true,'show':true}" alt="some photo" (click)="send(eachPhoto)"
+        <img [src]="eachPhoto" [ngClass]="{'photo':true,'show':true}" alt="some photo" (click)="send(eachPhoto)"
             [style.margin]="'20px'">
+        } -->
+
+
+        <img [src]="eachPhoto" [ngClass]="{'photo':true,'show':true,'galleryItem':$index>1}" alt="some photo"
+            (click)="send(eachPhoto)" [style.margin]="'20px'">
+
+
 
 
     </div>
