--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,8 +1,7 @@
-<tr *ngFor="let eachEntry of tableData let idxpos =index">
+<tr *ngFor="let eachEntry of tableData | filter:'status':searchString let idxpos =index">
     <td>{{eachEntry.orderId}}</td>
-    <td>{{eachEntry.customerName}}</td>
+    <td>{{eachEntry.customerName | uppercase}}</td>
     <!-- diplay status pending in redcolor and others in green color use ngStyle -->
-    <td [ngStyle]="{'color': eachEntry.status === 'pending' ? 'red' : 'green'}">{{eachEntry.status}}</td>
+    <td [ngStyle]="{'color': eachEntry.status === 'pending' ? 'red' : 'green'}">{{eachEntry.status |rob:'2':'4'}}</td>
     <td><button class="btn btn-danger" (click)="delete($event,idxpos)">Delete</button></td>
 </tr>
-
