day ten end of day

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>{{author}}</p>
+<!-- <app-component-one></app-component-one>
+<app-component-two></app-component-two> -->
+
+<!-- <app-matcomp></app-matcomp> -->
