--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,8 @@
 <div>
     <app-profile style="align-items: flex-end;"></app-profile>
 
-    <button (click)="invokeDecorated()">Click</button>
+    <!-- <button (click)="invokeDecorated()">Click</button> -->
+
 </div>
 
 {{value}}
