--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,6 +3,7 @@
     <img [src]="selctedPicture" alt="profile" [ngStyle]="{'width':'30px','height':'30px',
         'border':'2px solid gold','border-radius':'10px'}" *ngIf="showProfile">
 
+    <!-- <app-logout></app-logout> -->
 
 
 </nav>
