--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,10 @@ tr,td,th{
 
     border: 1px solid blue;
 }
+
+.acquaBackGround{
+
+    background-color: aqua;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
