training end commit

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,3 +2,17 @@
 <app-component-two></app-component-two> -->
 
 <!-- <app-matcomp></app-matcomp> -->
+
+<div class="container">
+
+    <div class="row">
+        <div class="col-md-6">First</div>
+        <div class="col-md-6">Second</div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">Four</div>
+        <div class="col-md-3">Five</div>
+        <div class="col-md-3">Six</div>
+        <div class="col-md-3">Seven</div>
+    </div>
+</div>
